--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>AsmrProg Chess Game</h1>
         <div class="board" id="board"></div>
         <div class="buttons">
-            <button class="play-again">Play Again</button>
+            <button class="play-again">Play Again (Commit)</button>
             <button class="set-pos">Set Position</button>
             <button class="flip-board">Flip Board</button>
         </div>
